<resources>
    <string name="app_name">Potapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_current_cycle">Current_cycle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_insights">Insights</string>
    <string name="title_calender">Calender</string>
    <string name="title_calculator">Period Calc</string>
    <string name="title_acc_profile">Profile</string>
    <string name="title_log">Symptoms Log</string>
    <string name="title_Symptoms">Symptoms</string>
    <string name="title_Tracker">Tracker</string>
    <string name="title_nutrition">Nutrition</string>
</resources>