<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/title_Tracker" />

    <item
        android:id="@+id/navigation_insights"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Symptoms" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/title_calculator" />
    <item
        android:id="@+id/navigation_log"
        android:icon="@drawable/ic_baseline_notes_24"
        android:title="@string/title_log" />
    <item
        android:id="@+id/navigation_nutrition"
        android:icon="@drawable/ic_baseline_food_bank_24"
        android:title="@string/title_nutrition" />


</menu>